package com.app.model;

public enum PaymentMethod {
	  CARTAO,
	  CONTA
}
