package com.app.model;

public enum PaymentStatus {

    CRIADO,
    PROCESSANDO,
    CONFIRMADO,
    RECUSADO
}
